--- a/abdo.html
+++ b/abdo.html
@@ -40,8 +40,8 @@
       we are a workteam in roblox<br>
     abdelrahman<img src="imges/277942957_701309287675569_8848333553733820564_n.jpg" height="200px" width="200px">
   mazen <img src="imges/278292477_501723661600806_4303095010088644235_n(1).jpg" height="200px" width="200px">
-malek <img src="" height="200px" width="200px">
-eyad <img src="" height="200px" width="200px"> </p>
+malek <img src="" height="200px" width="200px"alt="malek">
+eyad  <img src="" height="200px" width="200px" alt="eyad"> </p>
   </div>
 <!-- Image of location/map -->
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d927.5093254978927!2d39.150315170798436!3d21.58446699910626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2957c9303f77081e!2zMjHCsDM1JzA0LjEiTiAzOcKwMDgnNTkuMiJF!5e0!3m2!1sar!2ssa!4v1649843443611!5m2!1sar!2ssa" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
