--- a/abdo.html
+++ b/abdo.html
@@ -38,9 +38,9 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
     <p>about us 
       we are a workteam in roblox<br>
-    abdelrahman<img src="imges/277942957_701309287675569_8848333553733820564_n.jpg" height="200px" width="200px">
-  mazen <img src="imges/278292477_501723661600806_4303095010088644235_n(1).jpg" height="200px" width="200px">
-malek <img src="" height="200px" width="200px"alt="malek">
+    abdelrahman<img src="imges/277942957_701309287675569_8848333553733820564_n.jpg" height="200px" width="200px" alt="abdelrahman">
+  mazen <img src="imges/278292477_501723661600806_4303095010088644235_n(1).jpg" height="200px" width="200px"alt="mazen">
+malek <img src="imges/278131009_390006292715129_3635748018254717628_n.jpg" height="200px" width="200px"alt="malek">
 eyad  <img src="" height="200px" width="200px" alt="eyad"> </p>
   </div>
 <!-- Image of location/map -->
