--- a/abdo.html
+++ b/abdo.html
@@ -52,7 +52,7 @@ eyad  <img src="imges/278141526_666464047945517_5903274040204601071_n(1).jpg" he
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-  <p>Powered by abdo
+  <p>Powered by defense games</p>
     <a href="#" class="w3-button w3-black w3-padding-large w3-margin-bottom"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
 </footer>
 
