--- a/abdo.html
+++ b/abdo.html
@@ -33,10 +33,10 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
     <p>about us 
       we are a workteam in roblox<br>
-    abdelrahman<img src="imges/277942957_701309287675569_8848333553733820564_n.jpg" height="200px" width="200px" alt="abdelrahman">
-  mazen <img src="imges/278292477_501723661600806_4303095010088644235_n(1).jpg" height="200px" width="200px"alt="mazen">
-malek <img src="imges/278131009_390006292715129_3635748018254717628_n.jpg" height="200px" width="200px"alt="malek">
-eyad  <img src="imges/278141526_666464047945517_5903274040204601071_n(1).jpg" height="200px" width="200px" alt="eyad"> </p>
+    abdelrahman<img src="imges/277942957_701309287675569_8848333553733820564_n.jpg" height="200px" width="200px" alt="abdelrahman"><br>
+  mazen <img src="imges/278292477_501723661600806_4303095010088644235_n(1).jpg" height="200px" width="200px"alt="mazen"><br>
+malek <img src="imges/278131009_390006292715129_3635748018254717628_n.jpg" height="200px" width="200px"alt="malek"><br>
+eyad  <img src="imges/278141526_666464047945517_5903274040204601071_n(1).jpg" height="200px" width="200px" alt="eyad"> </p><br>
   </div>
 <!-- Image of location/map -->
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d927.5093254978927!2d39.150315170798436!3d21.58446699910626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2957c9303f77081e!2zMjHCsDM1JzA0LjEiTiAzOcKwMDgnNTkuMiJF!5e0!3m2!1sar!2ssa!4v1649843443611!5m2!1sar!2ssa" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
