--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@ eyad  <img src="imges/278141526_666464047945517_5903274040204601071_n(1).jpg" he
 
 <!-- End page content -->
 </div>
-
+<div>
+  
+</div>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
