--- a/signin.html
+++ b/signin.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <form action="owner.html">
- <input
+ user name<input type="text" title="user name here">
+ <br>
+ password <input type="password" title="password here">
+ <br>
+ <button>enter</button>
     </form>
 </body>
 </html>
