--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-5edd"><div class="u-clearfix u-sheet u-valign-top u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-5edd"><div class="u-clearfix u-sheet u-valign-top u-sheet-1">
         <a href="https://defensegames.github.io/defensegamewebsite/" class="u-image u-logo u-image-1" data-image-width="1080" data-image-height="1080" title="home">
           <img src="images/281289002_2046870875491259_853850284247530241_n-5.png?rand=3151" class="u-logo-image u-logo-image-1">
         </a>
