--- a/dashboard/admin_605ba9e7836b1f1da2ba90ed5ac7570a90ef9d677cb0b41547f31798b32f5be0.html
+++ b/dashboard/admin_605ba9e7836b1f1da2ba90ed5ac7570a90ef9d677cb0b41547f31798b32f5be0.html
@@ -33,7 +33,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="index3.html" class="nav-link">Home</a>
+        <a href="admin_605ba9e7836b1f1da2ba90ed5ac7570a90ef9d677cb0b41547f31798b32f5be0.html" class="nav-link">Home</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
         <a href="#" class="nav-link">Contact</a>
@@ -166,7 +166,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
+    <a href="admin_605ba9e7836b1f1da2ba90ed5ac7570a90ef9d677cb0b41547f31798b32f5be0.html" class="brand-link">
       <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">AdminLTE 3</span>
     </a>
@@ -222,7 +222,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./index3.html" class="nav-link active">
+                <a href="./admin_605ba9e7836b1f1da2ba90ed5ac7570a90ef9d677cb0b41547f31798b32f5be0.html" class="nav-link active">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Dashboard v3</p>
                 </a>
